# query-wod-and-memic-caps

./: CMakeLists.txt  README.md
example/: main.c
include/: mlx5_ifc_extended.h  query_wod_memic_cap.h
src/: query_wod_memic_cap.c
test/: main.c
